# zephyr-lego-hub

./: CMakeLists.txt  build.sh  prj.conf  test.sh
boards/: esp32c3_devkitm.overlay
src/: ble.c  ble.h  main.c
src/lwp_hub/: devices.c  devices.h  devices_types.h  hub.c  hub.h  lwp.c  lwp.h  lwp_types.h
src/lwp_hub/devices/: 0x0002_train_motor.h  0x0008_light.h  0x0017_rgb_led.c  0x0017_rgb_led.h
tests/: CMakeLists.txt
tests/src/: main.c  test_hub.c  test_lwp.c
tests/test_doubles/: ble.c  ble.h
